argocd/applications/podinfo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  ports:
    - name: http
      port: 9898
      targetPort: http
  selector:
    app.kubernetes.io/name: podinfo
